# Fenrir-rust

./: .gitignore  Cargo.toml  changelog.txt  design.txt  fen_to_hex.py  fenrir_battleground2.py  fenrir_test.py  perft_runner.sh  stockfish_perft.sh
benches/: perft.rs
src/: attack_table.rs  bitboard.rs  blocker_table.rs  board.rs  board_hash.rs  chess_move.rs  engine.rs  eval.rs  king.rs  knight.rs  lib.rs  main.rs  masks.rs  pawn.rs  pgn.rs  search_move.rs  shared_perft.rs  sliding_piece.rs  test_helpers.rs  transposition_table.rs
