[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-traits = "0.2.15"
num-derive = "0.3.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perft"
harness = false

